--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -23,7 +23,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <span class="navbar-text text-dark col">{{ title }}</span>
+          <span class="navbar-text col">{{ title }}</span>
         <a class="nav-item nav-link btn btn-dark col-auto" href='/notes/add'>ADD Note</a>
     </div>
 </nav>
