--- a/views/noteedit.hbs
+++ b/views/noteedit.hbs
@@ -1,15 +1,32 @@
-<form method='POST' action='/notes/save'>    
-     <input type='hidden' name='docreate' value='{{#if docreate}}createe{{else}}update{{/if}}'>
-     <p>
-          key: 
+<form method='POST' action='/notes/save'>
+     <div class="container-fluid">
+          {{#if docreate }}
+               <input type='hidden' name='docreate' value='create'/>
+          {{else}}
+               <input type='hidden' name='docreate' value='update'/>
+          {{/if}}
+          <div class="form-group row align-items-center">
+               <label for="notekey" class="col-1 col-form-label">Key</label>
                {{#if docreate }}
-                    <input type='text' name='notekey' value=''/>
+                    <div class="col">
+                         <input type='text' class="form-control" placeholder="note key" name='notekey' value=''/>
+                    </div>
                {{else}}
-                    {{#if note }}{{notekey}}{{/if}}
+                    {{#if note }}
+                         <span class="input-group-text">{{notekey}}</span>
+                    {{/if}}
                     <input type='hidden' name='notekey' value='{{#if note }}{{notekey}}{{/if}}'/>
                {{/if}}
-     </p>
-     <p>Title: <input type='text' name='title' value='{{#if note }}{{note.title}}{{/if}}'></p>
-     <br/><textarea roww=5 cols=40 name='body'></textarea>
-     <br/><input type='submit' value='Submit' />
+          </div>
+          <div class="form-group row">
+               <label for="title" class="col-1 col-form-label">Title</label>
+               <div class="col">
+                    <input type="text" class="form-control" id='title' name='title' placeholder="note title" value='{{#if note }}{{note.title}}{{/if}}' />
+               </div>
+          </div>
+          <div class="form-group row">
+               <textarea class="form-control" name='body' roww=5>{{#if note}}{{note.body}}{{/if}}</textarea>
+          </div>
+          <button class="btn btn-default" type='submit' value='Submit'>Submit</button>
+     </div>
 </form>
